# meta-ads-mcp

./: .env.example  .gitignore  README.md  SECURITY.md  manifest.json  pyproject.toml  smithery.yaml
.github/workflows/: tests.yml
src/meta_ads_mcp/: __init__.py  config.py  security.py  server.py
src/meta_ads_mcp/api/: __init__.py  client.py  pagination.py  rate_limiter.py
src/meta_ads_mcp/prompts/: __init__.py  analysis.py
src/meta_ads_mcp/resources/: __init__.py  campaign_data.py
src/meta_ads_mcp/tools/: __init__.py  accounts.py  ads.py  adsets.py  campaigns.py  creatives.py  insights.py
tests/: conftest.py  test_client.py  test_config.py  test_pagination.py  test_prompts.py  test_rate_limiter.py  test_security.py  test_tools.py
