[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meta-ads-mcp"
version = "0.1.0"
description = "Security-first MCP server for Meta (Facebook/Instagram) Ads API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Andres Ochoa", email = "noreply@github.com" }]
keywords = ["mcp", "meta", "facebook", "instagram", "ads", "marketing", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/andresochoa1/meta-ads-mcp"
Repository = "https://github.com/andresochoa1/meta-ads-mcp"
Issues = "https://github.com/andresochoa1/meta-ads-mcp/issues"
Documentation = "https://github.com/andresochoa1/meta-ads-mcp#readme"

dependencies = [
    "mcp>=1.26.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[project.scripts]
meta-ads-mcp = "meta_ads_mcp.server:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
